--- a/Project IA raghda/home.html
+++ b/Project IA raghda/home.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="#">Sign Up</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Log in</a>
+                <a class="nav-link" href="register.html">Log in</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#recipes">Recipes</a>
@@ -84,6 +84,6 @@
               
       </div>
     </div>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
