--- a/Project IA raghda/dinner.html
+++ b/Project IA raghda/dinner.html
@@ -77,5 +77,9 @@
 </ol>
           </div>
       </div>
+
+      <div class="spaghettiimg">
+        <img src="images/spaghetti.jpg" width="650px" height="700px">
+      </div>
 </body>
 </html>
