another reciepe added + title name modified in dinner page

--- a/Project IA raghda/dinner.html
+++ b/Project IA raghda/dinner.html
@@ -8,7 +8,7 @@
      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
      <link rel="stylesheet" href="dinner.css" type="text/css">
 
-    <title>Document</title>
+    <title>Foodify</title>
 </head>
 <body>
     <!--Navigation Bar-->
@@ -80,6 +80,37 @@
 
       <div class="spaghettiimg">
         <img src="images/spaghetti.jpg" width="650px" height="700px">
+      </div>
+
+      <div class = "spaghettitext">
+        <h1>Baked Spaghetti Casserole</h1>
+        <h4>
+          Ingredients are -> 
+          <ul>
+              <li>Dry spaghetti</li>
+              <li>Olive oil</li>
+              <li>Corn</li>
+              <li>Garlic</li>
+              <li>tomato paste</li>
+              <li>Basil</li>
+              <li>shredded mozzarella</li>
+              <li>Unsalted butter</li>
+          </ul>
+        </h4>
+
+        <h6>This Baked Spaghetti Recipe is a lifesaver when it comes to quickly preparing a homemade dinner. 
+          Sure, it doesn’t get much simpler than classic spaghetti (always a delicious choice!),
+           but add extra cheese and bake it until toasty perfection and you’ve got a weeknight dinner winner.
+
+          This is such a foolproof meal to make for your family after work, for Sunday night dinners, or even for gameday. 
+          It’s ready in less than an hour, 
+          no fancy ingredients required. This easy recipe is a favorite around here – cheesy pasta is always a good idea!</h6>
+<ol>
+  <li>Cook the spaghetti to al dente.</li>
+  <li>Make the marinara meat sauce.</li>
+  <li>Add the cooked pasta to the sauce and stir to fully coat the spaghetti.</li>
+  <li>Transfer to a baking dish, sprinkle with cheese, and bake.</li>
+</ol>
       </div>
 </body>
 </html>
