--- a/Project IA raghda/breakfast.html
+++ b/Project IA raghda/breakfast.html
@@ -78,8 +78,51 @@
                     <li>Cook for 2-3 minutes for the first side, watching for the batter to begin to bubble before flipping.</li>
                     <li>Turn and cook for 1-2 more minutes, or until pancake is browned on both sides to your liking.</li>
                     <li>Put the toppings and extras. And enjoy!</li>
-
-                        
                 </ol>
             </ul>
+        </div>
+    </div>
+
+    <div class="muffinsimg">
+      <img src="images/blueberry-muffins.jpg" width="650px" height="700px">
+    </div>
+
+    <div class = "muffinstext">
+      <h1>Blueberry Muffins</h1>
+      <h4>
+        Ingredients are -> 
+        <ul>
+            <li>1/3 cup vegetable oil</li>
+            <li>1 cup granulated sugar</li>
+            <li>½ cup sour cream</li>  
+            <li>½ cup buttermilk</li>
+            <li>1 egg</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1 ½ cup all-purpose flour plus 2 teaspoons for blueberries</li>
+            <li>½ teaspoon salt</li>
+            <li>2 teaspoons baking powder1</li>
+            <li>1 ½ cup fresh blueberries</li>
+        </ul>
+      </h4>
+      <h6>
+        "Making muffins from scratch has never been easier! This easy Blueberry Muffins Recipe serves up soft muffins with a sugary,
+         crumble top and of course LOTS of blueberries! A berry delicious snack, breakfast or dessert!"
+    </h6>
+      <ul>
+        <li><b>Instructions :</b> </li>
+       <ol>
+            <li> Preheat oven to 375 degrees F. </li>
+            <li>Mix together oil and sugar until fluffy.</li>
+            <li>Whisk in sour cream, buttermilk, egg, and vanilla until just combined.</li>
+            <li>Add in 1 ½ cups flour, salt, and baking powder and stir. Do not overmix.</li>
+            <li>Toss fresh blueberries with 2 teaspoons flour until all the blueberries are coated.</li>
+            <li>Add blueberries into mixture and gently fold until incorporated, making sure not to break any of the berries.</li>
+            <li>Spoon blueberry mixture into a lined or well-greased muffin tin until each tin is 2/3 full.</li>  
+            <li>Prepare brown sugar topping by stirring together brown sugar, flour, and melted butter.</li> 
+            <li>Sprinkle each muffin with a generous coating of brown sugar topping.</li>
+            <li>Bake in oven for 20 to 25 minutes or until muffins spring back when touched or toothpick comes out clean.</li> 
+        </ol>
+    </ul>
+  </div>
+    
     </body>
