full project (two errors found in edit and records)

--- a/Project IA raghda/Appetizers.html
+++ b/Project IA raghda/Appetizers.html
@@ -42,7 +42,7 @@
       <br><br>
       <div class="container">
       <div class="recipes">
-          <h3>homemade chicken strips </h3>
+          <h3>Homemade chicken strips </h3>
 <p>
     <strong>The ingredients are:</strong>
     <ul>
@@ -63,8 +63,8 @@
       <strong>The instructions are:</strong>
 </p>
       </div>
-      <div class="image">
-          <img src="Project IA raghda/images/chicken strips.jpg" width="600px" height="450px">
+      <div class="imagestrips">
+          <img src="images/strips.jpg" width="600px" height="450px">
       </div>
     </div>
     <br>
