--- a/Project IA raghda/dinner.html
+++ b/Project IA raghda/dinner.html
@@ -8,7 +8,7 @@
      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
      <link rel="stylesheet" href="dinner.css" type="text/css">
 
-    <title>Foodify</title>
+    <title>Dinner</title>
 </head>
 <body>
     <!--Navigation Bar-->
